--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --black: #1f2937;
+    --purple: #818cf8;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -15,4 +20,28 @@ body {
     height: 100%;
     width: 100%;
     -webkit-overflow-scrolling: touch;
+}
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--purple) var(--black);
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+    height: 6px;
+    width: 6px;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: var(--purple);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #6366f1;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #6366f1;
 }
